<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">uTool</string>
    <string name="user_interface">Interface</string>
    <string name="bars">Bar Interface</string>
    <string name="system">System</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="empty">Empty</string>
    <string name="general_ui">General UI</string>
    <string name="battery">Battery</string>
    <string name="clock">Clock</string>
    <string name="signal">Signal</string>
    <string name="statusbar">Statusbar</string>
    <string name="quick_toggles">Quick Toggles</string>
    <string name="power_widget">Power Widget</string>
    <string name="status_extras">Status Extras</string>
    <string name="others">Other</string>
    <string name="navigation_bar">Navigation Bar</string>
    <string name="power_menu">Power Menu</string>
    <string name="led_options">LED</string>
    <string name="pie">PIE™</string>
    <string name="spen_options">S Pen Gestures</string>
    <string name="header_system">System</string>
    <string name="sound">Sound</string>
    <string name="hybridsettings">Hybrid Properties</string>
    <string name="lockscreen_options">Lockscreen</string>
    <string name="lockscreen">Lockscreen</string>
    <string name="ribbon">Ribbon</string>
    <string name="weather">Weather</string>
    <string name="tools">Tools</string>
    <string name="bar_cat">Bar</string>
    <string name="icon_cat">Status Icon</string>
    <string name="notif_cat">Notification</string>
    <string name="title_general_ui">General UI</string>
    <string name="title_statusbar_clock">Clock</string>
    <string name="title_quick_toggles">Quick Toggles</string>
    <string name="title_power_widget">Power Widget</string>
    <string name="title_statusbar_signal">Signal</string>
    <string name="title_statusbar_battery">Battery</string>
    <string name="title_statusbar">Status Bar</string>
    <string name="title_status_extras">Status Extras</string>
    <string name="title_navbar">Navigation Bar</string>
    <string name="title_spen">S Pen Gestures</string>
    <string name="title_navring">Navigation Ring</string>
    <string name="title_power_menu">Power Menu</string>
    <string name="title_led_control">LED Control</string>
    <string name="title_lockscreen">Lockscreen</string>
    <string name="title_ribbon">Ribbon</string>
    <string name="title_pie">PIE™</string>
    <string name="title_hybridsettings">Hybrid Properties</string>
    <string name="title_clipboard_share">Copy to Clipboard</string>
    <string name="ribbon_settings_title">Ribbon options</string>
    <string name="themes_title">Themes</string>
    <string name="clipboard_notification">Copied to clipboard</string>
    <string name="header_summary">@null</string>
    <string name="menu_main_activity_change_locale">Locale</string>
    <string name="menu_nav_bar_reset">Reset nav bar</string>
    <string name="menu_ribbon_reset">Reset ribbon</string>
    <string name="menu_ribbon_apps">Reset apps</string>
    <string name="menu_ribbon_rearrange">Rearrange ribbon</string>
    <string name="menu_ribbon_hide">Hide apps</string>
    <string name="menu_ribbon_toggles">Setup toggles</string>
    <string name="menu_ribbon_na">Not available</string>
    <string name="menu_ribbon_toggles_error">Toggles are only available for the left and right swipe ribbons.</string>
    <string name="menu_user_interface_reset">Reset notification wallpaper</string>
    <string name="menu_lockscreens_reset">Reset lockscreen wallpaper</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="misc_short">Misc</string>
    <string name="custom_app_icon_successfully">"'s icon set successfully!"</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="text_on">On</string>
    <string name="text_off">Off</string>
    <string name="spen_left_title">Action on swipe left</string>
    <string name="spen_right_title">Action on swipe right</string>
    <string name="spen_up_title">Action on swipe up</string>
    <string name="spen_down_title">Action on swipe down</string>
    <string name="spen_double_title">Action on double tap</string>
    <string name="spen_long_title">Action on long press</string>
    <string name="spen_enable">S Pen Gestures</string>
    <string name="spen_enable_summary">Set custom actions for S Pen gestures</string>
    <string name="spen_extras_cat">S Pen Extras</string>
    <string name="spen_gestures_cat">S Pen Gestures</string>
    <string name="enable_stylus_pointer_title">S Pen pointer</string>
    <string name="enable_stylus_pointer_summary">Enable the mouse icon when using the S Pen</string>
    <string name="use_custom_app_title">Use custom application</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="use_custom_app_summary">Use custom application instead of the recent applications dialog</string>
    <string name="group_applications">Applications</string>
    <string name="choose_application">Choose application</string>
    <string name="select_application">Select application</string>
    <string name="dpi">DPI</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#FF000000</string>
    <string name="set">Set</string>
    <string name="ics_color">Holo</string>
    <string name="title_show_profiles">Profiles</string>
    <string name="title_show_screenshot">Screenshot</string>
    <string name="title_show_airplane_toggle">Airplane mode</string>
    <string name="title_show_torch_toggle">Torch</string>
    <string name="power_menu_expanded_desktop">Expanded desktop</string>
    <string name="expanded_desktop_cat">Advanced</string>
    <string name="summary_expanded_desktop">%1$s</string>
    <string name="expanded_desktop_summary_status_bar">Status bar visible</string>
    <string name="expanded_desktop_summary_no_status_bar">Status bar hidden</string>
    <string name="expanded_desktop_disabled">Off</string>
    <string name="title_show_volume_state_toggle">Volume states</string>
    <string name="expanded_desktop_status_bar">Status bar visible</string>
    <string name="expanded_desktop_no_status_bar">Status bar hidden</string>
    <string name="title_show_navbar_hide">Navigation bar menu</string>
    <string name="title_show_reboot_keyguard">Reboot option on lockscreen</string>
    <string name="title_show_power_keyguard">Power off on lockscreen</string>
    <string name="status_bar_clock_header">Clock</string>
    <string name="status_bar_battery_header">Battery</string>
    <string name="status_bar_signal_header">Signal</string>
    <string name="status_bar_misc">Misc</string>
    <string name="status_bar_clock_enable_title">Enable Clock</string>
    <string name="status_bar_clock_title">Clock style</string>
    <string name="status_bar_general_title">General</string>
    <string name="clock_title_enable">Clock style</string>
    <string name="title_clock_ampm_entries">AM/PM style</string>
    <string name="enable_clock_weekday">Day of the week</string>
    <string name="enable_clock_weekday_summary">Abbreviated day of the week before the time</string>
    <string name="clock_color_title">Clock color</string>
    <string name="clock_color_style_title">Clock color style</string>
    <string name="all_color">Colors Everywhere!</string>
    <string name="stock_color">Stock Colors</string>
    <string name="alarm">Alarms</string>
    <string name="clock_options">Clock Options</string>
    <string name="nothing">Nothing</string>
    <string name="today">Calendar for today</string>
    <string name="event">Calendar new event</string>
    <string name="voiceassist">Voice commands</string>
    <string name="title_clock_doubleclick">Clock double click actions</string>
    <string name="title_clock_longclick">Clock long click actions</string>
    <string name="title_clock_shortclick">Clock short click actions</string>
    <string name="status_bar_icon_opacity">Notification icon opacity</string>
    <string name="status_bar_icon_opacity_summary">Sets opacity of status bar notification icons</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in proper format ie. mm/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="dont_show_default">Don\'t show (default)</string>
    <string name="normal">Normal</string>
    <string name="small_date">Small date</string>
    <string name="regular_date">Regular date</string>
    <string name="lowercase">Lowercase</string>
    <string name="uppercase">Uppercase</string>
    <string name="pie_control_title">Enable PIE targets</string>
    <string name="pie_control_always">Show always</string>
    <string name="pie_control_expanded">Expanded Mode</string>
    <string name="pie_control_disabled">Disabled</string>
    <string name="pie_control_size">Navigation size</string>
    <string name="pie_control_trigger_positions">Trigger options</string>
    <string name="pie_control_trigger_left">Trigger left screen border</string>
    <string name="pie_control_trigger_bottom">Trigger bottom screen border</string>
    <string name="pie_control_trigger_right">Trigger right screen border</string>
    <string name="pie_control_trigger_top">Trigger top screen border</string>
    <string name="pie_control_trigger_top_summary">Only navigation will be displayed at top</string>
    <string name="pie_button_style">Buttons style</string>
    <string name="statusbar_behaviour">Statusbar Behaviour</string>
    <string name="statusbar_hide_summary">Choose from 3 different statusbar behaviour</string>
    <string name="hidden_statusbar_pulldown_timeout_title">Hidden Statusbar Pulldown Timeout</string>
    <string name="hidden_statusbar_pulldown_timeout_summary">Timeout for hidden Statusbar window</string>
    <string name="transparency_dialog_title">Transparency settings</string>
    <string name="status_bar_style_title">Status Bar color style</string>
    <string name="status_bar_color_title">Status Bar color</string>
    <string name="status_icon_style_title">Status color style</string>
    <string name="status_icon_color_title">Status color</string>
    <string name="custom_carrier_label_title">Custom carrier label</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display number of pending notifications on the status bar</string>
    <string name="notification_behaviour_title">Notification behavior</string>
    <string name="notification_show_wifi_ssid_title">Show Wifi network</string>
    <string name="notification_show_wifi_ssid_summary">Display the name of the currently connected Wifi network on notification drawer</string>
    <string name="notification_wallpaper_title">Choose notification background</string>
    <string name="notification_wallpaper_summary">You can remove the wallpaper from the menu in this window</string>
    <string name="notif_wallpaper_alpha_title">Notification background alpha</string>
    <string name="brightness_slider_title">Statusbar brightness slider</string>
    <string name="brightness_slider_summary">Allows you to slide your finger along the top of the statusbar to change the brightness. Does nothing when autobrightness is enabled.</string>
</resources>