<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:key="icon"
            android:title="@string/icon_cat">

        <ListPreference
            android:key="icon_color_style"
            android:entries="@array/status_color_style_entries"
            android:entryValues="@array/status_color_style_values"
            android:title="@string/status_icon_style_title" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="status_icon_color"
            android:title="@string/status_icon_color_title"
            android:defaultValue="0xFF33B5E5" />

        <CheckBoxPreference
            android:key="status_bar_notif_count"
            android:title="@string/status_bar_notif_count_title"
            android:summary="@string/status_bar_notif_count_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
            android:key="bars"
            android:title="@string/bar_cat">

        <Preference
            android:key="transparency_dialog"
            android:title="@string/transparency_dialog_title" />

        <ListPreference
            android:key="bar_color_style"
            android:entries="@array/color_style_entries"
            android:entryValues="@array/color_style_values"
            android:title="@string/status_bar_style_title" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="status_bar_color"
            android:title="@string/status_bar_color_title"
            android:defaultValue="0xFF000000" />

        <CheckBoxPreference
            android:key="statusbar_brightness_slider"
            android:title="@string/brightness_slider_title"
            android:summary="@string/brightness_slider_summary" />

        <Preference
            android:key="custom_carrier_label"
            android:title="@string/custom_carrier_label_title" />

        <ListPreference
            android:key="hide_statusbar"
            android:entries="@array/hidden_statusbar_entries"
            android:entryValues="@array/hidden_statusbar_values"
            android:title="@string/statusbar_behaviour"
            android:summary="@string/statusbar_hide_summary" />

        <ListPreference
            android:key="hidden_statusbar_pulldown_timeout"
            android:entries="@array/hidden_statusbar_pulldown_timeout_entries"
            android:entryValues="@array/hidden_statusbar_pulldown_timeout_values"
            android:title="@string/hidden_statusbar_pulldown_timeout_title"
            android:summary="@string/hidden_statusbar_pulldown_timeout_summary" />

        <ListPreference
            android:key="expanded_desktop"
            android:title="@string/power_menu_expanded_desktop"
            android:entries="@array/expanded_desktop_entries"
            android:entryValues="@array/expanded_desktop_values"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
            android:key="notif"
            android:title="@string/notif_cat">

        <CheckBoxPreference
            android:key="notification_show_wifi_ssid"
            android:title="@string/notification_show_wifi_ssid_title"
            android:summary="@string/notification_show_wifi_ssid_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="notifications_behaviour"
            android:title="@string/notification_behaviour_title"
            android:entries="@array/notifs_beh_entries"
            android:entryValues="@array/notifs_beh_values" />

        <Preference
            android:key="notification_wallpaper"
            android:title="@string/notification_wallpaper_title"
            android:summary="@string/notification_wallpaper_summary" />

        <Preference
            android:key="notification_wallpaper_alpha"
            android:title="@string/notif_wallpaper_alpha_title" />

        <Preference
            android:key="reset_wallpaper"
            android:title="@string/menu_user_interface_reset" />

    </PreferenceCategory>

</PreferenceScreen>
